eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Retail_1_2_1_Form_2012__c.object
<CustomObject>
    <description>Monthly 1-2-1 form used by Retail for staff monthly reviews</description>
    <fields>
        <fullName>Actions_from_Previous_1_2_1__c</fullName>
        <inlineHelpText>Please include here the agreed action points from previous 1-2-1 along with details of how these actions have been concluded.</inlineHelpText>
        <label>Actions from Previous 1-2-1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreed_Actions_development__c</fullName>
        <inlineHelpText>Please enter 3-4 key development areas or agreed actions that will be the focus for the colleague and line manager ahead of the next review period.</inlineHelpText>
        <label>Agreed Actions development</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Handle_Time_AHT__c</fullName>
        <inlineHelpText>Please enter the AHT time for the agent in seconds for that month</inlineHelpText>
        <label>Average Handle Time (AHT)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_raised_errors_issues__c</fullName>
        <inlineHelpText>Please enter number of any branch raised issues or errors during the review period</inlineHelpText>
        <label>Branch raised errors/issues</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPH_Actual__c</fullName>
        <inlineHelpText>Please select the CPH actual performance for the review period to nearest whole number</inlineHelpText>
        <label>CPH Actual</label>
        <picklist>
            <controllingField>Staff_Members_Role__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPH_Target__c</fullName>
        <inlineHelpText>Please enter the CPH target for the staff member in the review period</inlineHelpText>
        <label>CPH Target</label>
        <picklist>
            <controllingField>Staff_Members_Role__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSI_Individual_Score__c</fullName>
        <inlineHelpText>Please enter the staff members individual CSI score for the review period</inlineHelpText>
        <label>CSI Individual Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSI_Individual_Target_Score__c</fullName>
        <inlineHelpText>Please enter the CSI target score for the individual</inlineHelpText>
        <label>CSI Individual Target Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calls_Made_Target__c</fullName>
        <inlineHelpText>Please enter the calls target for the colleague for that month</inlineHelpText>
        <label>Calls Made Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calls_Made__c</fullName>
        <inlineHelpText>Please enter number of customer calls made</inlineHelpText>
        <label>Calls Made</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compliance_Checks__c</fullName>
        <description>This</description>
        <inlineHelpText>This area should be used to record details of any Branch/Manager complainace checks or details of any compliance visit interview scores etc. for individuals</inlineHelpText>
        <label>Compliance Checks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_of_Error_Value__c</fullName>
        <label>Cost of Error (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_1_2_1_Conducted__c</fullName>
        <description>date of the review taking place</description>
        <inlineHelpText>date of the review taking place</inlineHelpText>
        <label>Date 1-2-1 Conducted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Points_Sales__c</fullName>
        <inlineHelpText>Please enter the 2-3 key development points for colleagues during the next review period</inlineHelpText>
        <label>Development Points Sales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_points_Service__c</fullName>
        <inlineHelpText>Please enter any service excellence development points for the colleague in here (maximum 2-3 points per colleague)</inlineHelpText>
        <label>Development points Service</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCU_HO_raised_errors_issues__c</fullName>
        <inlineHelpText>Please enter the volume of issues/errors highlighted for the individual from FCU/Head Office during the review period</inlineHelpText>
        <label>FCU/HO raised errors/issues</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factfinds_Completed__c</fullName>
        <inlineHelpText>Please enter the number of Factfinds completed by the individual for the review period</inlineHelpText>
        <label>Factfinds Completed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factfinds_Target__c</fullName>
        <inlineHelpText>Please enter the individuals target for Factfinds</inlineHelpText>
        <label>Factfinds Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GOGW_Value__c</fullName>
        <label>GOGW (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_AIP_Actual__c</fullName>
        <description>Please enter the actual number of AIPs for the staff member during the review period</description>
        <inlineHelpText>Please enter the actual number of AIPs for the staff member during the review period</inlineHelpText>
        <label>HPP AIP Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_AIP_Target__c</fullName>
        <description>Please enter the staff members HPP AIP Target for the review period</description>
        <inlineHelpText>Please enter the staff members HPP AIP Target for the review period</inlineHelpText>
        <label>HPP AIP Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_AIP_to_Target__c</fullName>
        <formula>HPP_AIP_Actual__c  /  HPP_AIP_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP AIP % to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPP_Opportunity_Actual__c</fullName>
        <inlineHelpText>Please enter the actual value of HPP Opportunities by the colleague for the review period</inlineHelpText>
        <label>HPP Opportunity Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Opportunity_Target__c</fullName>
        <inlineHelpText>Please Enter the colleagues HPP Opportunity target</inlineHelpText>
        <label>HPP Opportunity Target</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hpp_Opportunity_to_target__c</fullName>
        <formula>HPP_Opportunity_Actual__c  /  HPP_Opportunity_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hpp Opportunity % to target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTS_Actual__c</fullName>
        <label>LTS Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTS_Target_This_Month__c</fullName>
        <label>LTS Target (This Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTS_Target__c</fullName>
        <label>LTS Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter Line Managers name conducting the 1-2-1</description>
        <inlineHelpText>Enter Line Managers name conducting the 1-2-1</inlineHelpText>
        <label>Line Managers Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IBB_Retail_1_2_1_Form_20121</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managers_Comments_on_Review_Period__c</fullName>
        <inlineHelpText>Line Manager should enter his comments on the performance of the individual during the review period under discussion</inlineHelpText>
        <label>Managers Comments on Review Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Money_Secured_Actual__c</fullName>
        <inlineHelpText>Please enter the staff members target for new money for the review period</inlineHelpText>
        <label>New Money Secured Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Money_Secured__c</fullName>
        <inlineHelpText>Please enter the value of New Money secured during the review period</inlineHelpText>
        <label>New Money Secured</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Complaints_against_individual__c</fullName>
        <inlineHelpText>Please enter the volume of complaints raised against the individual during the review period</inlineHelpText>
        <label>No. Complaints against individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Days_Sickness__c</fullName>
        <inlineHelpText>Please enter the number of days sickness for the individual during the review period</inlineHelpText>
        <label>No. Days Sickness</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Upheld_Complaints_Individual__c</fullName>
        <inlineHelpText>Please enter the number of upheld complaints against the individual during the review period</inlineHelpText>
        <label>No. Upheld Complaints (Individual)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_ocassions_Lateness__c</fullName>
        <inlineHelpText>Please enter the number times a colleague has been late during the review period</inlineHelpText>
        <label>No. Occasions Lateness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation_Score_1_This_Month__c</fullName>
        <inlineHelpText>Please enter Observation Score for colleague</inlineHelpText>
        <label>Observation Score 1 This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Observation_Score_2_this_Month__c</fullName>
        <inlineHelpText>Please enter second observation score for review period</inlineHelpText>
        <label>Observation Score 2 this Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation_Score_3_This_Month__c</fullName>
        <inlineHelpText>Please enter observation score 3 for the review period</inlineHelpText>
        <label>Observation Score 3 This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Calls_Against_Target__c</fullName>
        <formula>Calls_Made__c  /  Calls_Made_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Calls Against Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Factfinds_against_Target__c</fullName>
        <formula>Factfinds_Completed__c  /  Factfinds_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Factfinds against Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_LTS_Against_Target__c</fullName>
        <formula>Secured_LTS_Value_Actual__c  /  Secured_LTS_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated</inlineHelpText>
        <label>Percentage LTS Against Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_NR_Time_target__c</fullName>
        <label>Percentage NR Time target</label>
        <picklist>
            <picklistValues>
                <fullName>2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_New_Money_to_Target__c</fullName>
        <formula>New_Money_Secured__c  /  New_Money_Secured_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage New Money to Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Not_Ready_Time__c</fullName>
        <inlineHelpText>Please enter the 5 NR time for the review period</inlineHelpText>
        <label>Percentage Not Ready Time</label>
        <picklist>
            <controllingField>Staff_Members_Role__c</controllingField>
            <picklistValues>
                <fullName>1%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 20%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Wrap_Time__c</fullName>
        <inlineHelpText>What is the percentage wrap time for the agent for the review period</inlineHelpText>
        <label>Percentage Wrap Time</label>
        <picklist>
            <controllingField>Staff_Members_Role__c</controllingField>
            <picklistValues>
                <fullName>1%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Wrap_Time_target__c</fullName>
        <label>Percentage Wrap Time target</label>
        <picklist>
            <picklistValues>
                <fullName>6%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>8%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_to_target_LTS__c</fullName>
        <label>Percentage to target LTS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Month_reviewed__c</fullName>
        <description>Month of review</description>
        <inlineHelpText>Please enter the month that performance is being reviewed for</inlineHelpText>
        <label>Performance Month reviewed</label>
        <picklist>
            <picklistValues>
                <fullName>January 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Related_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Related to</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>IBB_Retail_1_2_1_Form_2012</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_development_Progress_made__c</fullName>
        <label>Personal development: Progress made</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_development_agreed_actions__c</fullName>
        <label>Personal development: Agreed actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_development_objective__c</fullName>
        <label>Personal development: Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regulatory_Training_Result__c</fullName>
        <inlineHelpText>Please enter the result of the regulatory training undertaken</inlineHelpText>
        <label>Regulatory Training Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass (1st Attempt)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass (2 or more attempts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulatory_Training_completed__c</fullName>
        <inlineHelpText>Please provide details of any regulatory training courses completed during the review period.</inlineHelpText>
        <label>Regulatory Training completed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_training_Completion_Date__c</fullName>
        <inlineHelpText>Please enter the date the regulatory training was completed</inlineHelpText>
        <label>Regulatory training Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regulatory_training_Development__c</fullName>
        <inlineHelpText>please enter any details of agreed development points in relation to regulatory training undertaken if appropriate.</inlineHelpText>
        <label>Regulatory training Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Managment_Summary__c</fullName>
        <inlineHelpText>Please enter details of any risk management issues raised against the individual during the review period along with remedial actions/action plan agreed to address.</inlineHelpText>
        <label>Risk Managment Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secured_LTS_Value_Actual__c</fullName>
        <inlineHelpText>Please enter the value of LTS secured during the review period use the Staff 1-2-1 data dashboard to complete the figures.</inlineHelpText>
        <label>Secured LTS Value Actual</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secured_LTS_Value__c</fullName>
        <inlineHelpText>Please enter the value of secured LTS accounts for the review period</inlineHelpText>
        <label>Secured LTS Value Target</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Development_Training__c</fullName>
        <description>Training/Development</description>
        <inlineHelpText>Please enter details of any specific development or training the individual has received during the review period.  This should include a summary of issues and any ROC/HR File Notes if appropriate.</inlineHelpText>
        <label>Specific Development/Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Members_Role__c</fullName>
        <description>please select the correct role for the staff member</description>
        <inlineHelpText>Please select the correct role for the staff member</inlineHelpText>
        <label>Staff Members Role</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Centre Sales &amp; Service Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre Outbound Sales Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre Customer Support Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre MI &amp; Resource Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre Sales &amp; Service Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre Deputy Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Customer Service Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Sales &amp; Service Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Deputy Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediary &amp; HPP Direct Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community BDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Members_comments_on_review_period__c</fullName>
        <inlineHelpText>Staff member should enter the general comments on the period under review</inlineHelpText>
        <label>Staff Members comments on review period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter the colleagues name for the 1-2-1</description>
        <inlineHelpText>Please enter the colleagues name for the 1-2-1</inlineHelpText>
        <label>Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IBB_Retail_1_2_1_Form_2012</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Till_Difference_Value__c</fullName>
        <label>Till Difference (Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Till_Differences_Losses_Branch_only__c</fullName>
        <inlineHelpText>Please enter details of number of till differences/losses for the individual during the review period</inlineHelpText>
        <label>Till Differences/Losses Volume (Branch)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_could_have_gone_better__c</fullName>
        <inlineHelpText>Staff member should enter 2-3 bullet points/comments on what could have gone better during the review period.</inlineHelpText>
        <label>What could have gone better</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_went_Well_during_review_period__c</fullName>
        <inlineHelpText>The Staff member should enter details of what they feel they have achieved during the review period and what has gone well for them against their individual objectives/Targets from their PDP.</inlineHelpText>
        <label>What went Well during review period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X121_Form_Approved__c</fullName>
        <label>121 Form Approved</label>
        <type>Date</type>
    </fields>
    <label>Retail 1-2-1 Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Performance_Month_reviewed__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Rizwaan</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Retail 1-2-1 Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail 1-2-1 Form</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>